@startuml
title Final Project - Communication and Notification Management Diagram

left to right direction
hide circle
hide methods

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam nodesep 95
skinparam ranksep 85

skinparam Class {
  BorderColor #334155
  BackgroundColor white
  FontColor #0F172A
}

skinparam Arrow {
  Color #475569
  Thickness 1
}

skinparam Note {
  BackgroundColor #FFF7ED
  BorderColor #F97316
  FontColor #7C2D12
}

package "Users" {
  class User {
    +id: bigint
    +name: string
    +email: string
    +requested_role: string
  }
}

package "Communication Records" {
  class Message {
    +id: bigint
    +sender_id: bigint
    +receiver_id: bigint
    +subject: string
    +body: text
    +read_at: datetime
  }

  class TeacherResource {
    +id: bigint
    +teacher_id: bigint
    +class_id: bigint
    +category: string
    +name: string
  }
}

package "Notification Records" {
  class DatabaseNotification {
    +id: uuid
    +type: string
    +notifiable_id: bigint
    +data: json
    +read_at: datetime
    +created_at: datetime
  }

  class SecretaryAnnouncement {
    +title: string
    +message: text
    +url: string
    +issuer_id: bigint
  }
}

User "1" --> "*" Message : sends
User "1" <-- "*" Message : receives

User "1" <-- "*" DatabaseNotification : receives

Message ..> DatabaseNotification : new message
TeacherResource ..> DatabaseNotification : resource action
SecretaryAnnouncement ..> DatabaseNotification : announcement

User "1" --> "*" TeacherResource : uploads
User "1" --> "*" SecretaryAnnouncement : issues

note bottom of User
All actors are User records
with different roles.

Communication access depends on
the assigned role and permissions.
end note

note right of DatabaseNotification
Stores alerts for messages,
approval decisions, attendance
updates, resources, and announcements.
end note

note bottom of SecretaryAnnouncement
Announcements are sent by
secretary/admin users to selected
role audiences.
end note

@enduml